Glitches when screencasting undefined areas
Affected version
ubuntu 20.04, using the actual gnome-session (3.36.4)
Bug summary
glitchy areas in native screencast
Steps to reproduce
- get a set-up with several screens, with different sizes, or not aligned
- warm up your fingers
- do the unusually complex shortcut to start a screencast
What happened
this:
Capture_d_écran_vidéo_de_28-09-2020_16_06_55
What did you expect to happen
undefined areas should be black (or alpha, if it's a thing in webm)